# langgraph_multi_agent_mcts

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ADVANCED_EMBEDDINGS_SUMMARY.md  AGENTS.md  AGENT_TRACING_SUMMARY.md  API_CONFIGURATION_GUIDE.md  ATTRIBUTION.md  BENCHMARK_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CHANGELOG_TRAINING_FIXES.md  CLAUDE.md  CLAUDE_CODE_IMPLEMENTATION_TEMPLATE.md  CLAUDE_CODE_SUBAGENT_TEMPLATE.md  COMPREHENSIVE_PR_DESCRIPTION.md  CONTINUAL_LEARNING_SUMMARY.md  CUTTING_EDGE_ENSEMBLE_IMPLEMENTATION.md  DEPLOYMENT_REPORT.md  Dockerfile  Dockerfile.test  Dockerfile.train  HEALTH_CHECKS_REPORT.md  HUGGINGFACE_DEPLOYMENT_STATUS.md  IMPLEMENTATION_PLAN_COMPREHENSIVE.md  IMPLEMENTATION_PLAN_PRIORITY_TASKS.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  IMPLEMENTATION_SUMMARY_TESTING.md  INTEGRATION_STATUS.md  LANGSMITH_IMPLEMENTATION_SUMMARY.md  LangGraph_Multi_Agent_MCTS_Colab.ipynb  MCP_SERVER_GUIDE.md  MODULE_6_COMPLETION_SUMMARY.md  MODULE_7_COMPLETION_REPORT.md  MODULE_9_COMPLETION_REPORT.md  MULTI_AGENT_MCTS_TEMPLATE.md  NEXT_STEPS_PLAN.md  (+48 more)
.claude/: settings.local.json
_auto_backup/: GAP_ANALYSIS_REPORT.md
claude_subagents/: perf-subagent.md
config/: README.md  alerting_rules.yaml  assembly_config.yaml
data/: training_with_assembly.json
demo_src/: __init__.py  mcts_demo.py
demos/: neural_meta_controller_demo.py  producer_reviewer_phi4_demo.py
docs/: AGENT_TRACING_GUIDE.md  API_QUICK_REFERENCE.md  ASSEMBLY_THEORY.md  BUSINESS_VALUE_ROI.md  C4_ARCHITECTURE.md  C4_MERMAID_ARCHITECTURE.md  CODEBASE_EXPLORATION.md  DATASET_SETUP.md  DEEPMIND_IMPLEMENTATION.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_REPORT.md  DEPLOYMENT_SUMMARY.md  DOCKER_DEPLOYMENT.md  E2E_USER_JOURNEYS.md  EXPERIMENT_TRACKING_GUIDE.md  IMPLEMENTATION_PLAN.md  KEY_CODE_SNIPPETS.md  LANGSMITH_E2E.md  LANGSMITH_EXPERIMENTS.md  LINTING_SETUP.md  LOCAL_TRAINING_GUIDE.md  NEURAL_TRAINING_SUMMARY.md  NEXT_STEPS_INVESTIGATION.md  PHASE2_MCTS_CODE_GENERATION_TEMPLATE.md  PINECONE_INTEGRATION.md  RAG_EVALUATION.md  RAG_EVALUATION_QUICKSTART.md  RAG_EVAL_DATASET_SUMMARY.md  RAG_EVAL_QUICK_START.md  REASONING_MCTS_INTEGRATION.md  SECRETS_MANAGEMENT.md  SETUP_COMPLETE.md  SETUP_SUMMARY.txt  SLA.md  SPRINT2_META_CONTROLLER_ASSEMBLY.md  TRAINING_DATASETS.md  architecture.md  feature_engineering_enhancement.md  implementation_plan.md  security_audit.md  (+1 more)
examples/: advanced_mcts_demo.py  chess_alphazero_training.py  comprehensive_system_demo.py  dataset_training_examples.py  deepmind_style_training.py  demo.py  hybrid_agent_demo.py  langgraph_multi_agent_mcts.py  llm_provider_usage.py  lmstudio_mcp_demo.py  mcts_determinism_demo.py  neural_training_demo.py  neuro_symbolic_demo.py  rag_evaluation_example_output.md  reasoning_mcts_example.py  synthetic_data_generation_example.py  web_search_demo.py
huggingface_space/: .gitignore  DEPLOYMENT_FIX_GUIDE.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_GUIDE.md  INDEX.md  QUICK_FIX.md  README.md  README_DEPLOYMENT_FIXES.md  app.py  app_minimal_fallback.py  app_mock.py  deploy.py  fix_dependencies.py  force_cache_bust.py  force_rebuild.py  requirements.txt  verify_deployment.py
kubernetes/: deployment.yaml
monitoring/: alertmanager.yml  alerts.yml  otel-collector-config.yaml  prometheus.yml  prometheus_alerts_rag.yml
notebooks/: MultiAgent_MCTS_Demo.ipynb
planning/: milestones.yaml
scripts/: benchmark_latency.py  create_langsmith_datasets.py  create_rag_eval_datasets.py  deployment_sanity_check.py  docker_train.ps1  evaluate_rag.py  export_architecture_diagrams.py  extend_rag_eval_dataset.py  generate_meta_controller_training_data.py  generate_synthetic_training_data.py  lint_and_format.py  production_readiness_check.py  run_benchmarks.py  run_comprehensive_training.py  run_continuous_play.py  run_docker_training.sh  run_e2e_journey.py  run_e2e_workflow.py  run_langsmith_experiments.py  run_local_demo.ps1  run_production_training.sh  security_audit.py  setup_hf_auth.py  setup_langsmith_projects.py  smoke_test.sh  smoke_test_traced.py  test_lmstudio_connection.py  test_rag_evaluation.py  train_assembly_meta_controller.py  validate_datasets.py  validate_experiment_tracking.py  verify_continual_learning.py  verify_external_services.py  verify_langsmith_minimal.py  verify_langsmith_setup.py  verify_pinecone_integration.py  verify_rag_dataset.py  verify_synthetic_generator.py
test-results/: SUMMARY-20251117-203606.txt  api-results.xml  coverage-20251117-191213.json  coverage-report-20251117-191213.txt  e2e-phase1-results-20251117-191213.txt  e2e-phase2-results-20251117-191213.txt  e2e-phase3-results-20251117-191213.txt  e2e-phase4-results-20251117-191213.txt  e2e-phase5-results-20251117-191213.txt  e2e-results.xml  e2e-summary-20251117-191213.txt  full-results.xml  integration-results.xml  performance-results.xml  summary-20251117-203522.json  unit-results.xml
tests/: README.md  builders.py  conftest.py  test_adapter.py  test_advanced_embeddings.py  test_benchmark_suite.py  test_contracts.py  test_dataset_loaders.py  test_deepmind_framework.py  test_e2e_providers.py  test_integration_e2e.py  test_meta_controller.py  test_neuro_symbolic_integration.py  test_performance.py  test_properties.py  test_reasoning_comprehensive.py  test_reasoning_mcts.py
training/: ADVANCED_EMBEDDINGS.md  BENCHMARK_ARCHITECTURE.md  BENCHMARK_QUICKSTART.md  BENCHMARK_SUITE_README.md  CONTINUAL_LEARNING.md  INTEGRATION_GUIDE.md  KNOWLEDGE_GRAPH_QUICKSTART.md  KNOWLEDGE_GRAPH_README.md  MULTIMODAL_OVERVIEW.md  MULTIMODAL_QUICKSTART.md  MULTIMODAL_README.md  MULTIMODAL_SUMMARY.md  QUICKSTART_CODE_CORPUS.md  QUICKSTART_CONTINUAL_LEARNING.md  QUICK_START_SELF_PLAY.md  README.md  README_SYNTHETIC_GENERATOR.md  RESEARCH_CORPUS_QUICKSTART.md  SELF_PLAY_README.md  SYNTHETIC_DATA_GENERATION_GUIDE.md  __init__.py  advanced_embeddings.py  agent_trainer.py  benchmark_config.yaml  benchmark_examples.py  benchmark_suite.py  cli.py  code_corpus_builder.py  config.yaml  config_local_demo.yaml  continual_learning.py  (+20 more)
(+928 files in other folders)
