[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-multi-agent-mcts"
version = "0.1.0"
description = "Multi-Agent Framework with MCTS Integration and LangGraph"
readme = "docs/langgraph_mcts_architecture.md"
authors = [
    {name = "MCTS Framework Team", email = "team@example.com"}
]
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["langgraph", "mcts", "multi-agent", "llm", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langgraph>=0.0.1",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "psutil>=5.9.0",
    "aioboto3>=12.0.0",
    "tenacity>=8.2.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "opentelemetry-instrumentation-httpx>=0.42b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.3.0",
    "hypothesis>=6.88.0",
    "mypy>=1.7.0",
    "types-psutil>=5.9.0",
    "types-requests>=2.31.0",
    "ruff>=0.1.9",
    "black>=23.12.0",
    "pre-commit>=3.6.0",
    "bandit[toml]>=1.7.0",
    "pip-audit>=2.6.0",
]
prometheus = [
    "prometheus-client>=0.18.0",
]
neural = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "peft>=0.7.0",
    "datasets>=2.14.0",
    "PyYAML>=6.0.0",
    "sentence-transformers>=2.2.0",
]
experiment = [
    "braintrust>=0.0.100",
]
vectordb = [
    "pinecone>=7.0.0",
]
google-adk = [
    "google-adk>=1.14",
    "google-cloud-aiplatform[adk,agent-engines]>=1.93.0",
    "python-dotenv>=1.0.1",
    "immutabledict>=4.2.1",
    "sqlglot>=26.10.1",
    "db-dtypes>=1.4.2",
    "regex>=2024.11.6",
    "tabulate>=0.9.0",
    "absl-py>=2.2.2",
    "pandas>=2.3.0",
    "numpy>=2.3.1",
    "toolbox-core>=0.3.0",
    "opentelemetry-exporter-otlp-proto-http>=1.36.0",
    "pg8000>=1.31.2",
]
all = [
    "langgraph-multi-agent-mcts[dev,prometheus,neural,experiment,vectordb,google-adk]",
]

[project.urls]
Homepage = "https://github.com/ianshank/langgraph_multi_agent_mcts"
Repository = "https://github.com/ianshank/langgraph_multi_agent_mcts"
Documentation = "https://github.com/ianshank/langgraph_multi_agent_mcts/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E741",   # ambiguous variable names (allow single letter vars in math/loops)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
    "B905",   # zip without strict parameter (not always needed)
    "ARG001", # unused function argument
    "ARG002", # unused method argument (often required by interface/protocol)
    "ARG005", # unused lambda argument
    "C416",   # unnecessary dict/list comprehension (sometimes clearer)
    "SIM108", # use ternary operator (sometimes less readable)
    "SIM116", # use dict.get (sometimes less clear)
    "SIM117", # combine with statements (sometimes clearer separate)
    "F541",   # f-string without placeholders (used for future formatting)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG002"]  # Unused method argument - pytest fixtures
"training/tests/*" = ["ARG002"]  # Unused method argument - pytest fixtures
"tools/*" = ["ARG002"]  # Unused method argument - API handlers with required signatures
"training/*" = ["ARG002", "SIM108"]  # Training modules have complex patterns

[tool.black]
line-length = 120
target-version = ["py311"]
skip-string-normalization = false

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
timeout = 300  # 5 minute timeout for long-running tests
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: End-to-end user journey tests",
    "api: API endpoint tests",
    "training: Training pipeline tests",
    "dataset: Dataset integration tests",
    "performance: Performance and load tests",
    "security: Security validation tests",
    "chaos: Chaos engineering tests for system resilience",
    "smoke: Smoke tests for basic functionality",
    "benchmark: Performance benchmark tests",
    "component: Component-level tests for specific modules",
    "contract: Contract tests for API and interface compliance",
    "property: Property-based tests using hypothesis",
    "sanity: Fast sanity checks for CI/CD (deselect with '-m \"not sanity\"')",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2
fail_under = 50.0  # Set realistic initial coverage threshold (gradually increase as coverage improves)
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pass",
    "except ImportError:",
    "@abstractmethod",
]

[tool.coverage.paths]
source = ["src/", "*/site-packages/"]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B311"]  # Skip assert and random warnings
targets = ["src"]

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]
